--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "python-baseimage",
+  "name": "@zrpaplicacoes/python-baseimage",
+  "version": "1.0.0",
   "scripts": {
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "node update.js && standard-version"
   },
   "author": "ZRP <zrp@zrp.com.br>",
   "license": "MIT",
