--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -1,5 +1,4 @@
-# Python 3.7 Release
-FROM python:3.7
+FROM python:%%VERSION%%
 
 # Maintainer Information
 LABEL maintainer="ZRP <zrp@zrp.com.br>"
@@ -7,7 +6,7 @@ LABEL vendor="ZRP"
 LABEL license="MIT"
 
 # Set environment variables
-ENV PYTHON_VERSION=3.7 \
+ENV PYTHONVERSION=3.7 \
   APP_PATH=/home/python/app \
     PATH=/usr/local/bin:/home/python:/home/python/app/bin:/home/python/.poetry/bin:$PATH
 
